fix: align input items to center vertically

--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,7 @@ body {
 }
 .input-line {
   display: flex;
+  align-items: center;
 }
 .input {
   background-color: black;
